<resources>
<<<<<<< HEAD
    <string name="app_name">Aerospace</string>
    <string name="bachi">배치 보기</string>
    <string name="map_of_2floor"></string>
    <string name="map_of_5floor"></string>
    <string name="groundfloor">GroundFloor</string>
    <string name="secondfloor">SecondFloor</string>
    <string name="eighthfloor">eighthFloor</string>
    <string name="seventhfloor">seventhFloor</string>
    <string name="sixthfloor">sixthFloor</string>
</resources>
=======
    <string name="app_name">TradeFunc</string>
    <string name="rental_history_label">Rental History</string>
</resources>
>>>>>>> d483333 (Initial commit)
